# microservice_qa

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: AppStatus.py  User.py
app/routers/: status.py  users.py
clients/: base_session.py  users_api.py
tests/: conftest.py  test_api.py  test_methods.py  test_pagination.py  test_smoke.py
